# MultiModalAnalysis

./: .gitignore  MANIFEST.in  README.md  mMA_GUIs.py  mMA_class.py  mMA_fits.py  mMA_fits_old.py  mMA_importing.py  mMA_main.py  mMA_plots.py  mMA_settings.py  requirements.txt  setup.cfg  setup.py
mmanalysis/: __init__.py  config.py  main_analysis.py  mmanalysis.py
mmanalysis/cli/: mmanalysis_cli.py
mmanalysis/core/: fits.py  settings.py
mmanalysis/data/: Example_Al2O3_calib_10keV_6p25_2p0_35p0_10s.tif  alumina.D  default_calibration.poni  ito_calibrant.D
mmanalysis/gui/: mma_gui.py
mmanalysis/io/: importing.py  pyFAICalibration.py
mmanalysis/visualization/: plots.py
