[metadata]
name = mmanalysis
version = attr:mmanalysis.__version__
author = attr:mmanalysis.__author__
author_email = TimKodalle@lbl.gov
url = https://github.com/sutterfellalab/MultiModalAnalysis
description = MultiModalAnalysis is a package to easily postprocess GIWAXS data.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
packages = find:
install_requires = file:requirements.txt
